# MeteorTools

./: .gitignore  README.md  index.yaml  pyproject.toml  testapp-0.1.0.tgz
.github/workflows/: codeql-analysis.yml  docs.yaml  docs.yml  testing.yaml
DailyChecks/: camera1.ini  dailyReview.ps1
analysis/: addVidorImg.ps1  allCameraRadiantMap.ps1  analysis.ini  createMonthlyStack.ps1  deploy_scripts.yml  doOneTrackstack.ps1  fireballAnalyser.ps1  getFilesForPlatepar.ps1  getGMNFireballData.ps1  getStationDets.ps1  getVideoDataForYT.ps1  makePPallFromPP.ps1  manualReduction.ps1  multiTrackStack.ps1  refresh_local_copy.sh  requirements.txt  syncFireballData.ps1  uploadImprovedFBFiles.ps1  uploadImprovedFTP.ps1  uploadOrbit.ps1  vars.yml
analysis/test_data/: RMS-UFOA-single.csv  RMS-all-single.csv  RMS-assoc-single.csv
analysis/test_data/analyse/: testAnalyseFile.ps1
analysis/test_data/curatelive/: M20200516_001744_EastBarnet_NE.xml  M20200711_000453_EastBarnet_NE.xml  M20200711_000516_EastBarnet_NE.xml  M20200711_000528_EastBarnet_NE.xml  M20200711_000539_EastBarnet_NE.xml  M20200711_000550_EastBarnet_NE.xml  M20200711_000601_EastBarnet_NE.xml  M20200711_000612_EastBarnet_NE.xml  M20200711_000623_EastBarnet_NE.xml  M20200711_000635_EastBarnet_NE.xml  M20200711_000646_EastBarnet_NE.xml  M20200711_000657_EastBarnet_NE.xml  M20200711_000741_EastBarnet_NE.xml  M20200711_000752_EastBarnet_NE.xml  M20200711_000803_EastBarnet_NE.xml  M20200711_000814_EastBarnet_NE.xml  M20200711_001049_EastBarnet_NW.xml  M20200711_001050_EastBarnet_NE.xml  M20200711_001416_Lockyer1_L1.xml  M20200711_001427_EastBarnet_NE.xml  M20200711_001447_EastBarnet_NE.xml  M20200711_001505_EastBarnet_NE.xml  M20200711_001505_TACKLEY_TC.xml  M20200711_001528_EastBarnet_NE.xml  M20200711_001548_EastBarnet_NE.xml  M20200711_001609_EastBarnet_NE.xml  (+118 more)
charts/: index.yaml  testapp-0.1.0.tgz
charts/testapp/: values.yaml
fbCollector/: config.ini  download_events.sh  fbCollector.ps1  fbcollector.yml  fireballCollector.py
gui/: fireballCollector.py  requirements.txt
meteortools/: README.md  __init__.py
meteortools/advanced/: findPotentialShowers.py
meteortools/fileformats/: UFOAnalyzerXML.py  ftpDetectInfo.py  imoWorkingShowerList.py  kmlHandlers.py
meteortools/rmsutils/: __init__.py  multiEventGroundMap.py  pickleToKml.py
meteortools/tests/: makeMaxCamData.py  runTests.sh  test_ukmondb.py  test_utils.py
meteortools/ukmondb/: ECSVhandler.py  __init__.py  getDetections.py  getLiveImages.py  getMatches.py  trajPickle.py  trajectoryKML.py
meteortools/utils/: __init__.py  convertSolLon.py  getActiveShowers.py  getShowerDates.py  plotTrack.py  sendAnEmail.py
mjmm_meteortools/fileformats/: UFOAnalyzerXML.py  ftpDetectInfo.py  imoWorkingShowerList.py
mjmm_meteortools/rmsutils/: multiTrackStack.py  pickleToKml.py
mjmm_meteortools/ukmondb/: trajPickle.py  trajectoryKML.py
mjmm_meteortools/utils/: convertSolLon.py  getActiveShowers.py  getShowerDates.py  plotTrack.py
(+6 files in other folders)
